# typedb-ops-spine

./: .gitignore  CHANGELOG.md  LICENSE  PRIVATE_BETA.md  README.md  pyproject.toml
.github/workflows/: ci.yml  staging-schema-deploy.yml
docs/: FAILURE_RECOVERY.md  LOCAL_DEMO.md  PROOF.md  beta-outreach-pack.md
examples/minimal_project/: README.md  ci_example.yml  schema.tql
examples/minimal_project/migrations/: 001_bootstrap.tql
tests/: __init__.py  conftest.py
tests/integration/: test_apply_schema_and_migrate.py  test_canary_and_probe.py
tests/unit/: test_apply_schema_cli.py  test_diag_emitter.py  test_docs_contract.py  test_exec_barrier.py  test_migrate.py  test_migrate_cli.py  test_min_write_probe_cli.py  test_readiness.py  test_schema_apply.py  test_schema_apply_recovery.py  test_schema_health.py  test_schema_health_cli.py  test_schema_version_query_syntax_lock.py  test_tsv_extract.py  test_typedb_diag.py  test_write_canary_cli.py
typedb_ops_spine/: __init__.py  diagnostics.py  exec.py  migrate.py  readiness.py  schema_apply.py  schema_health.py  schema_version.py  tsv_extract.py  typedb_diag.py
typedb_ops_spine/cli/: __init__.py  apply_schema_cli.py  migrate_cli.py  min_write_probe_cli.py  schema_health_cli.py  tsv_extract_cli.py  typedb_diag_cli.py  write_canary_cli.py
